# metrify

./: setup.sh
metrify/: .gitignore  Dockerfile.server  Dockerfile.worker  docker-compose.yml  rebuild-ui.sh  turbo.json
metrify/sdk/python/: pyproject.toml
metrify/sdk/python/metrify/: __init__.py  client.py
metrify/sdk/typescript/: package.json
metrify/sdk/typescript/src/: index.ts
metrify/server/: alembic.ini  pyproject.toml
metrify/server/alembic/: env.py
metrify/server/alembic/versions/: 001_initial.py
metrify/server/metrify/: app.py  config.py  database.py  redis.py
metrify/server/metrify/api/: deps.py
metrify/server/metrify/api/v1/: auth.py  billing.py  dashboard.py  events.py  margins.py  router.py  vat.py
metrify/server/metrify/models/: __init__.py  ai_cost.py  base.py  customer.py  event.py  organization.py  project.py  usage_aggregate.py  vat_config.py
metrify/server/metrify/repositories/: ai_cost.py  base.py  customer.py  event.py
metrify/server/metrify/schemas/: billing.py  event.py  margin.py  vat.py
metrify/server/metrify/services/: billing_sync.py  cost_puller.py  event_ingestion.py  margin_calculator.py  usage_aggregation.py  vat_engine.py
metrify/server/metrify/tasks/: aggregate_usage.py  broker.py  pull_costs.py  scheduled.py  sync_billing.py
metrify/server/scripts/: seed.py
metrify/server/tests/: conftest.py  test_margin_calculator.py  test_vat_engine.py
metrify/web/: .env.local  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
metrify/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
(+25 files in other folders)
