[project]
name = "metrify-server"
version = "0.1.0"
description = "Usage-based billing middleware + cost intelligence for AI startups"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "dramatiq[redis]>=1.17.0",
    "stripe>=11.0.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "anthropic>=0.36.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.14.0",
    "posthog>=3.7.0",
    "apscheduler>=3.10.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.hatch.build.targets.wheel]
packages = ["metrify"]